fixed the overflow in skills section and added some responsibility

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 }
 
 html {
-    scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
 
 .homepage {
@@ -40,7 +40,7 @@ html {
 }
 
 .nav-items a {
-    color: black;
+  color: black;
 }
 
 .home-container {
@@ -111,16 +111,20 @@ p {
 
 .skills-wrapper {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: center;
   gap: 20px;
   margin: 10px;
+   max-width: 90%;
 }
 
 .bubble {
   border: 3px solid black;
   padding: 10px 20px;
+  font-size: 1rem;
   border-radius: 100px;
+  white-space: nowrap;
 }
 
 .projects-wrapper {
@@ -145,13 +149,9 @@ p {
   text-align: left;
 }
 
-.project-button {
-  outline: none;
-  padding: 10px;
-  margin: 10px 0;
-  color: white;
-  background: black;
-  border-radius: 50px;
+.button-wrapper {
+  display: flex;
+  gap: 10px;
 }
 
 .contact-page {
@@ -178,7 +178,9 @@ p {
   gap: 20px;
 }
 
-.social-buttons button {
+/* Utility Classes */
+
+.primary-button {
   outline: none;
   padding: 10px;
   margin: 20px 0;
@@ -189,8 +191,25 @@ p {
   cursor: pointer;
 }
 
-.social-buttons button:hover {
+.primary-button:hover {
   color: white;
   background-color: black;
   transition: 0.2s ease;
+}
+
+/* Media Queries */
+
+@media (max-width: 768px) {
+  .home-content h1 {
+    text-align: center;
+
+  }
+
+  .home-content {
+    width: 100%;
+  }
+  
+  .navbar {
+    display: none;
+  }
 }
